// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation.addMessage should add message to specified chat 1`] = `
Object {
  "addMessage": Object {
    "content": "Hello World",
    "id": "5",
  },
}
`;

exports[`Mutation.addMessage should add message to specified chat 2`] = `
Object {
  "chat": Object {
    "id": "1",
    "lastMessage": Object {
      "content": "Hello World",
      "id": "5",
    },
  },
}
`;
